config: Add function timeout configuration to vercel.json
- Add maxDuration setting for Python API functions
- Prepare for redeployment without authentication protection
- Improve serverless function reliability

--- a/vercel.json
+++ b/vercel.json
@@ -22,5 +22,10 @@
         "src": "/(.*)", 
         "dest": "frontend/$1"
       }
-    ]
+    ],
+    "functions": {
+      "api/app.py": {
+        "maxDuration": 30
+      }
+    }
   } 
