Add Vercel debugging and error handling
- Add Python runtime specification for Vercel
- Increase maxLambdaSize to handle dependencies
- Add graceful error handling for RAG imports
- Enhanced health check with debugging info
- Handle missing aimakerspace modules on Vercel

This should fix the FUNCTION_INVOCATION_FAILED errors

--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,13 @@
           "distDir": "build"
         }
       },
-      { 
-        "src": "api/app.py",
-        "use": "@vercel/python"
+    { 
+      "src": "api/app.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "50mb"
       }
+    }
     ],
     "routes": [
       { 
