--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
     "routes": [
       { 
         "src": "/api/(.*)", 
-        "dest": "api/app.py"
+        "dest": "api/minimal_app.py"
       },
       { 
         "src": "/(.*)", 
