--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
         }
       },
     { 
-      "src": "api/main.py",
+      "src": "api/app.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "50mb"
@@ -19,7 +19,7 @@
     "routes": [
       { 
         "src": "/api/(.*)", 
-        "dest": "api/main.py"
+        "dest": "api/app.py"
       },
       { 
         "src": "/(.*)", 
