DEBUG: Test if Vercel picks up ANY changes
- Created debug_test.py with /api/debug endpoint
- Updated vercel.json to use debug_test.py
- If /api/debug works, we know Vercel can deploy new code
- If not, there's a fundamental deployment/caching issue

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       }
     },
     { 
-      "src": "api/app.py",
+      "src": "api/debug_test.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "50mb"
@@ -19,7 +19,7 @@
   "routes": [
     { 
       "src": "/api/(.*)", 
-      "dest": "api/app.py"
+      "dest": "api/debug_test.py"
     },
     { 
       "src": "/(.*)", 
