fix: Enhance PDF processing for Vercel deployment
- Increase Lambda timeout from 30s to 60s
- Add pypdf library as fallback for PDF processing
- Implement robust PDF extraction with fallback mechanisms
- Add file size validation (15MB upload, 10MB processing)
- Add detailed error logging and diagnostics
- Enhance health check endpoint with diagnostic information
- Improve error messages for better user feedback
- Add proper filename validation

This addresses issues with PDF processing in serverless environments
by providing multiple PDF extraction methods and better error handling.

--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       }
     },
     { 
-      "src": "api/debug_test.py",
+      "src": "api/app.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "50mb"
@@ -19,7 +19,7 @@
   "routes": [
     { 
       "src": "/api/(.*)", 
-      "dest": "api/debug_test.py"
+      "dest": "api/app.py"
     },
     { 
       "src": "/(.*)", 
@@ -32,7 +32,7 @@
   },
   "functions": {
     "api/app.py": {
-      "maxDuration": 30
+      "maxDuration": 60
     }
   }
 }
