--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,6 +4,7 @@ pydantic==2.11.4
 python-multipart==0.0.18
 google-generativeai==0.8.3
 PyPDF2==3.0.1
+pypdf==4.0.1
 Pillow==10.4.0
 aiofiles==24.1.0
 python-dotenv==1.1.1
